Fixing alignment issue in print for MC and MR questions

--- a/WebContent/styles/testGenMain.css
+++ b/WebContent/styles/testGenMain.css
@@ -2214,7 +2214,7 @@ ul.a {
 .qbQuestions {
 	margin: 1px;
 	padding-left: 1px;
-	padding-bottom: 5px;
+	padding-bottom: 8px;
 	padding-right: 7px;
 	padding-top: 9px;
 }
